# Planter

./: .gitignore  Planter.py  README.md  RELEASE_NOTES.txt
Data/: readme.md
Data/Iris/: readme.md
Docs/: Projects.md
P4/: Bayes_performance_Iris_LB.p4  DT_performance_Iris_DM.p4  DT_performance_Iris_EB_BMv2.p4  readme.md
Tables/: Exact_Table.json  Runtime.json  Ternary_Table.json  load_table.py  readme.md
src/: readme.md
src/architectures/: readme.md
src/architectures/mtpsa_users/: p4_generator.py  readme.md
src/architectures/psa/: p4_generator.py  readme.md
src/architectures/spectrum/: p4_generator.py  readme.md
src/architectures/tna/: p4_generator.py  readme.md  target_related_p4.py
src/architectures/v1model/: p4_generator.py  readme.md
src/architectures/xsa/: p4_generator.py  readme.md
src/configs/: Directory_config.json  Planter_config.json  readme.md  requirements_pip3.txt  requirements_sudo_pip3.txt
src/eval/: evaluation.md
src/functions/: Muti_Exact_to_LPM.py  Range_to_LPM.py  Range_to_TCAM_Top_Down.py  add_license.py  add_license_raw.py  config_modification.py  directory_management.py  extract_log_file_info.py  figure_to_ASCII.py  find_dir.py  input_CLI.py  json_encoder.py  logic_gates.py  normalization.py  numeric_conversion.py  project_tree_graph.py  readme.md  script_line_counter.py  timer_printer.py
src/help/: wiki.md
src/help/Adding_Your_Own_Design/: Adding_architecture.md  Adding_dataset.md  Adding_model.md  Adding_target.md  Adding_use_case.md
src/help/Common_Issues/: Envronment_Issues.md
src/help/Planter_Supports/: Planter_Supported_Algorithms.md  Planter_Supported_Architectures.md  Planter_Supported_Datasets.md  Planter_Supported_Targets.md  Planter_Supported_Use_Cases.md
src/help/Sample_Tutorial/: Planter_Tutorial.md
src/help/Throughput_Test/: Planter_throughput_test_P4Pi-BMv2.md
src/load_data/: AWID3_5_tuple_dataset.py  AWID3_dataset.py  CICIDS_5_tuple_dataset.py  CICIDS_dataset.py  CICIDS_flow_dataset.py  CICMAL_flow_dataset.py  Finance_ASCII_dataset.py  Finance_dataset.py  Iris_dataset.py  KDD99_dataset.py  KDD99_range_dataset.py  QOE_dataset.py  RPL_dataset.py  UNSW_5_tuple_dataset.py  UNSW_5_tuple_range_dataset.py  UNSW_dataset.py  UNSW_sample_dataset.py  XBee_dataset.py  homunculusAD_dataset.py  homunculusBD_dataset.py  homunculusTC_dataset.py  new_UNSW_5_tuple_dataset.py  readme.md
src/logs/: log.json  readme.md
src/models/: readme.md
src/models/Autoencoder/: readme.md
src/models/Bayes/: readme.md
src/models/DT/: readme.md
src/models/IF/: readme.md
src/models/KM/: readme.md
src/models/KNN/: readme.md
src/models/NN/: readme.md
src/models/PCA/: readme.md
src/models/RF/: readme.md
src/models/SVM/: readme.md
src/models/XGB/: readme.md
src/optimiser/: readme.md
src/scripts/: readme.md  simple_switch_CLI_load_table.sh
src/targets/: readme.md
src/targets/NVIDIA_Spectrum/: readme.md
src/targets/Tofino/: readme.md
src/targets/alveo_u280/: README_alveo_u280.md
src/targets/alveo_u280/compile/model_test/esnet-smartnic-fw/: README.fw.artifacts  docker-compose.yml  meson.build
src/targets/alveo_u280/compile/model_test/esnet-smartnic-fw/debian/: copyright  esnet-smartnic-dev.install
src/targets/alveo_u280/compile/model_test/esnet-smartnic-fw/libopennic/: meson.build
src/targets/alveo_u280/compile/model_test/esnet-smartnic-fw/libopennic/src/: cmac.c  smartnic_probe.c  sysmon.c
src/targets/alveo_u280/compile/model_test/esnet-smartnic-fw/libsnp4/include/: snp4.h
src/targets/alveo_u280/compile/model_test/esnet-smartnic-fw/libsnp4/src/: snp4_api.c  snp4_info_hw.c  snp4_info_ut.c  snp4_info_util.c  snp4_table.c
src/targets/alveo_u280/compile/model_test/esnet-smartnic-fw/libsnp4/src/include/: snp4_io.h
src/targets/alveo_u280/compile/model_test/esnet-smartnic-fw/pkg-build/: sources.focal.list
src/targets/alveo_u280/compile/model_test/esnet-smartnic-fw/sn-cli/: meson.build
src/targets/alveo_u280/compile/model_test/esnet-smartnic-fw/sn-cli/src/: sn-cli.c  sub-cmac.c  sub-dev.c  sub-sw.c
src/targets/alveo_u280/compile/model_test/esnet-smartnic-fw/sn-p4-agent/: meson.build
src/targets/alveo_u280/compile/model_test/esnet-smartnic-fw/sn-p4-cli/: meson.build
src/targets/alveo_u280/compile/model_test/esnet-smartnic-fw/sn-p4-proto/: meson.build
src/targets/alveo_u280/compile/model_test/esnet-smartnic-fw/sn-stack/: README.INSTALL.md  docker-compose-flash.yml  docker-compose.yml
src/targets/alveo_u280/compile/model_test/esnet-smartnic-fw/sn-stack/scratch/: .gitignore
src/targets/alveo_u280/compile/model_test/esnet-smartnic-fw/sn-stack/smartnic-hw/scripts/: check_fpga_version.sh  program_flash.sh  read_jtag_registers.tcl
src/targets/alveo_u280/compile/model_test/esnet-smartnic-fw/subprojects/: esnet-smartnic-hwapi.wrap
src/targets/alveo_u280/compile/model_test/esnet-smartnic-fw/subprojects/packagefiles/esnet-smartnic-hwapi.overlay/: meson.build
src/targets/alveo_u280/compile/model_test/esnet-smartnic-fw/subprojects/packagefiles/esnet-smartnic-hwapi.overlay/regmap/: meson.build
src/targets/alveo_u280/hardware/model_test/esnet-smartnic-fw/libsnp4/: meson.build
src/targets/alveo_u280/hardware/model_test/esnet-smartnic-fw/libsnp4/src/: snp4_io.c  snp4_table_ut.cpp
src/targets/alveo_u280/hardware/model_test/esnet-smartnic-fw/libsnutil/: meson.build
src/targets/alveo_u280/hardware/model_test/esnet-smartnic-fw/libsnutil/include/: array_size.h  memory-barriers.h
src/targets/alveo_u280/hardware/model_test/esnet-smartnic-fw/subprojects/packagefiles/esnet-smartnic-hwapi.overlay/libvitisnetp4drv/: meson.build
src/targets/bmv2/: readme.md
src/targets/bmv2_DPU/: readme.md
src/targets/t4p4s/: readme.md
src/temp/: Test_Data.json  readme.md  tree.txt  tree0.txt  tree1.txt  tree10.txt  tree11.txt  tree12.txt  tree13.txt  tree14.txt  tree2.txt  tree3.txt  tree4.txt  tree5.txt  tree6.txt  tree7.txt  tree8.txt  tree9.txt
src/test/: readme.md  running_test.py  test_switch_model_alveo_u280_behavioral.py
src/use_cases/: readme.md
src/use_cases/anomaly_detection/: common_p4.py  (+1 more)
(+233 files in other folders)
